# sonique

./: .gitignore  CMakeLists.txt  FileUtils.h  MidiUtils.cpp  PianoKey.cpp  README.md  SongInfo.cpp  SongInfo.h  appicon.icns  main.cpp
MidiLogic/: MidiBlock.cpp  MidiBlock.h
ui/: MainMenuPage.cpp  MainMenuPage.h  PianoKey.cpp  PianoKey.h  PianoPage.cpp  PianoPage.h
utils/: FileUtils.cpp  MidiUtils.cpp  MidiUtils.h  SongInfo.cpp  SoundFontUtils.cpp  SoundFontUtils.h
